# soma-evals

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  extract.yaml  index.html  justfile  mkdocs.yml  pyproject.toml  simple_run.py
.github/workflows/: deploy-docs.yaml  main.yaml
ablation-levels/: index.html
about/: index.html
datasets/: models.yaml
datasets/cases/: README.md  ciliary_function.yaml  liu2024_cftr.yaml  montgomery2020_mucociliary.yaml
datasets/ground_truth/: Container-ciliary_function.yaml
datasets/prompts/: extract-no-schema.yaml  extract.yaml
models/: index.html
overview/architecture/: index.html
overview/what-and-why/: index.html
prompts/: index.html
running-evals/: index.html
search/: search_index.json
src/docs/: ablation-levels.md  about.md  index.md  models.md  prompts.md  running-evals.md
src/docs/overview/: architecture.md  what-and-why.md
src/docs/stylesheets/: extra.css
src/soma_evals/: __init__.py  __main__.py  compare.py  llm_adapter.py  pdf_utils.py  pricing.py  prompt_builder.py  runner.py  schema_context.py  schema_loader.py  scoring.py
stylesheets/: extra.css
tests/: test_prompt_builder.py  test_schema_loader.py  test_scoring.py
